Updates from Overleaf

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -4,3 +4,5 @@ Automatic differentiation (AD) is a method that automatically calculates the der
 According to \emph{\cite{SurveyAD}} the first ideas of the concept AD dates back to the 1950's \emph{\citep{nolan1953analytical, beda1959programs}}. More specifically, forward AD was discovered by Wengert in 1964 \emph{\citep{wengert1964simple}}. It is more difficult to date exactly when backward AD was discovered, but the first article containing the essence of backward AD dates back to the 1960's \emph{\citep{boltyanskii1960theory}}. After the initial discovery of AD further activities hibernated for a couple of years, before it was rediscovered along with the birth of modern computers and computer languages. The first running computer program that used backward AD, and automatically computed the derivatives, came in 1980 by Speelpenning \emph{\citep{speelpenning1980compiling}}. Further research on the topic was done by among others Griewank during the 1980's \emph{\citep{griewank1989automatic}}. Today AD is widely used in many applications. One of them is machine learning that specifically uses the backward AD to minimize functions. This project's main focus has been using the forward AD method to solve partial differential equations. 
 
 The report begins with describing the theory behind AD and the difference between backward and forward AD in \autoref{ch:theory}. The chapter continues describing different applications of AD and how we can use forward AD to elegantly solve partial differential equations using a finite volume method and a discretization of the differentiation operators. Chapter \ref{ch:Implementation} starts by elaborating on why we want to implement AD in Julia. Some implementation specific details are then discussed, before the implementation is tested against other AD implementations in Julia and MATLAB. The implemented AD library will then be used in \autoref{ch:FlowSolver} to solve an example that consists of solving partial differential equations that describe the flow inside an oil reservoir using a finite volume method. Lastly, \autoref{ch:Conclusion} summarizes the results and gives some thoughts on topics that are interesting to look further into.
+
+\todo[inline]{Skrive litt om reservoarsimulering siden jeg nevner det i \autoref{sec:TwoPhaseSimulation}}
