--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -288,3 +288,18 @@ eprint = {
     year = {2016},
     note = {Accessed 13.05.2019}
 }
+@article{MatlabExecutionEnging,
+    title = {MATLAB Execution Engine},
+    author = {Mathworks},
+    url = {https://uk.mathworks.com/products/matlab/matlab-execution-engine.html},
+    urldate = {2019-05-21},
+    year = {2016},
+    note = {Accessed 21.05.2019}
+}
+@misc{SPE10,
+    key = {SPE10},
+    url = {https://www.sintef.no/projectweb/geoscale/results/msmfem/spe10/},
+    urldate = {2019-05-21},
+    year = {n.d.},
+    note = {Accessed 21.05.2019}
+}
