--- a/02_julia.tex
+++ b/02_julia.tex
@@ -6,16 +6,16 @@ Julia is a new programming language that was created by Jeff Bezanson, Alan Edel
 \end{quotation}
 
 \section{Characteristics of Programming languages}
-To understand why the creators of Julia wanted to build this new program, we need to have a closer look at what type of programming languages there are out there already, and what separates them. All programming languages that are used in numerical applications are written in a high level language. This is a language that is easily readable for a human. The code that is written is called source code. This source code needs to be translated for the machine to understand it. The translated code is called machine code. How this translation happens is a big part of what gives the different languages their different capabilities. I will not go very deep into the subject, as it is too comprehensive for this thesis, but try to scratch the surface such that the different capabilities of the different languages becomes clear.
+To understand why the creators of Julia wanted to build this new programming language, we need to have a closer look at what type of programming languages there are out there already, and what separates them. All programming languages that are used in numerical applications are written in a high level language. This is a language that is easily readable for a human. The code that is written is called source code. This source code needs to be translated for the machine to understand it. The translated code is called machine code. How this translation happens is a big part of what gives the different languages their different capabilities. I will not go very deep into the subject, as it is too comprehensive for this thesis, but try to scratch the surface such that the different capabilities of the different languages becomes clear.
 
 \subsection{Type Checking}
 Firstly, before the translation happens, the program needs to be type checked. This consist of verifying that the variables are not set to unsupported types. For example, an array consisting of integers cannot suddenly at a point in the program hold a string in one of its elements. There are two ways of type checking, the first is called static and the second is called dynamic. In a static language each variable needs to have a defined type beforehand and they are checked before the program is executed. We say that type checking happens before run-time. In addition a variable that is declared as one type cannot change type in its scope. The scope of a variable can quickly be explained as the part of the program where the variable is functioning. In dynamic languages the types of the variables does not need to be known before run-time and type correctness is checked at run-time, or in other words, continuously as the code is executed. A variable can also change type in its scope. Static languages are faster in the execution since it does not need to check for types as it is already done. You will, however, have to wait for the type checking to finish before the program can be executed. Dynamic languages are slower but the continuous type checking enables language designs that optimizes the coding process such that you can implement your program with less code. The first and most obvious difference from static languages is that you do not have to define what types each variable is. The type checking will find this out on its own at run-time. In addition it opens up for a feature called metaprogramming. Metaprogramming is programs that can take in other code as input and modify it such that implementing your code can be done more efficiently and faster. More specifically how this can be used will be discussed closer in \autoref{sec:Metaprogramming}.
 
 \subsection{Compiled and Interpreted Languages}
-The next translation difference between the languages is whether it is compiled or interpreted. A compiled language translates the source code to machine code before run-time. An interpreted language translates the code at run-time. To visualize how run-time compilation works, you can say that for each line of code it is first translated and then executed. Compiled languages are faster in the execution than an interpreted language. The reason for this is that when it translates all the code beforehand it can optimize the code that will be executed. You will, however, have to wait for the compiler to finish translating before the program can be executed. Hence, using an interpreted language can be faster when developing programs, as you do not have to recompile your entire program every time you have made a small change. There is also a third way to translate source code into machine code, called just-in-time compilation(JIT compilation). JIT compiled languages is a combination of compiled and interpreted languages. It compiles blocks of the source code such that it can do optimizations like compiled code, but at the same time it does not need to compile the whole source code before it executes the program. In this way it behaves like an interpreted language, but with the speed advantages of compiled languages. In most cases however, it will be slower than regular compiled languages. Disadvantages for JIT compiled languages is extra memory usage and that writing a JIT compiler is more difficult than other compilers. The latter does not affect the end user of the language.
+The next translation difference between the languages is whether it is compiled or interpreted. A compiled language translates the source code to machine code before run-time. An interpreted language translates the code at run-time. To visualize how run-time compilation works, you can say that for each line of code it is first translated and then executed. Compiled languages are faster in the execution than an interpreted language. The reason for this is that when it translates all the code beforehand it can optimize the code that will be executed. You will, however, have to wait for the compiler to finish translating before the program can be executed. Hence, using an interpreted language can be faster when developing programs, as you do not have to recompile your entire program every time you have made a small change. There is also a third way to translate source code into machine code, called just-in-time compilation (JIT compilation). JIT compiled languages is a combination of compiled and interpreted languages. It compiles blocks of the source code such that it can do optimizations like compiled code, but at the same time it does not need to compile the whole source code before it executes the program. In this way it behaves like an interpreted language, but with the speed advantages of compiled languages. In most cases however, it will be slower than regular compiled languages. Disadvantages for JIT compiled languages is extra memory usage and that writing a JIT compiler is more difficult than other compilers. The latter does not affect the end user of the language.
 
 \subsection{Languages for Numerical applications}
-For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C and C++. These are languages that executes very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB\footnote{In 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language.} and Python. These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have "(...) familiar mathematical notation like Matlab", be "(...) as  powerful  for  linear  algebra  as Matlab(...)" and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
+For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C and C++. These are languages that execute very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB\footnote{In 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language.} and Python. These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have "(...) familiar mathematical notation like Matlab", be "(...) as  powerful  for  linear  algebra  as Matlab(...)" and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
 
 \section{History of Julia}
 The process of creating a new programming language is however long. In 2009 the creators began the project of creating Julia and in the blog post \emph{\citep{juliaBlogRelease2012}} from 2012 they said "It’s not complete, but it’s time for a 1.0 release — the language we’ve created is called Julia". In a new blog post from August 8th 2018 \emph{\citep{juliaBlogReleaseV1.0}}, where they released the actual version 1.0 they admitted that they had jumped the gun a little with the mentioning of v1.0 in 2012, as it took more than six years before it actually happened. But after almost ten years of development v1.0 of the Julia language was released. The major consequence of a 1.0 release is that from this version and on, they guarantee backward compatibility. When they did not guarantee backward compatibility, code that worked on version, 0.1, 0.2 etc. would not necessarily run on newer versions of Julia. But from v1.0, all code that run on this version, will also run on future releases. This was a huge milestone for the Julia language. 
@@ -26,7 +26,7 @@ Since Julia is an open source and free program to use, one of its strengths is t
 
 \section{Metaprogramming in Julia}
 \label{sec:Metaprogramming}
-In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploits that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain true macros like the programming language Lisp \emph{\citep{Lisp}}. Macros are functions that are using metaprogramming to modify your existing code to give extra functionality. The macro functions in Julia are easily recognized by an "@" in front of the function name. To use a macro function on any function, you simply call the macro function before the original function call. I will now show three examples of macro functions in Julia that are very useful when creating numerical simulations.
+In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploit that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain true macros like the programming language Lisp \emph{\citep{Lisp}}. Macros are functions that are using metaprogramming to modify your existing code to give extra functionality. The macro functions in Julia are easily recognized by an "@" in front of the function name. To use a macro function on any function, you simply call the macro function before the original function call. I will now show three examples of macro functions in Julia that are very useful when creating numerical simulations.
 \subsection{Profiling}
 \label{sec:profiling}
 Profiling is an effective method to obtain overview of where bottlenecks lie in a code when trying to optimize its performance. The method consists of taking snapshots of the code with small time intervals and for each snapshot we register what function we are at and all the functions that have been called to get to this function. The latter is called the stack trace. By counting how many times a function is in the stack trace, we get an overview of how much time we spend in each function and where they are called from. Since we only register the number of times we have observed that we are in each function, this will not give a perfect picture on how much time we spend on all function. We even risk not registering all functions we use, but since the time interval between the snapshots are small (e.g. every tenth microsecond), a function that is not registered will not be interesting to optimize as it is already very fast. 
@@ -37,7 +37,7 @@ Profiling is an effective method to obtain overview of where bottlenecks lie in 
     \label{fig:profilingExample}
 \end{figure}
 
-\autoref{fig:profilingExample} shows the interface from the Juno IDE using the \texttt{@profiler} macro function \emph{\citep{JunoProfilerMacro}} for a simple test case. The right hand side of \autoref{fig:profilingExample} shows a test case with a \texttt{main()} function that creates a random variable \texttt{x} of length \texttt{z}. It then  calls the \texttt{func1(x)} function that adds 1.0 to each element of \texttt{x}. Lastly it calls \texttt{sumArray(x)} that sum up all the values of \texttt{x} and uses \texttt{func2()} to set all values of x to zero. \texttt{@profiler} is a specific Juno macro that uses the built in \texttt{@profile} in Julia \emph{\citep{Profile.jl}} to profile the \texttt{main()} function, but in addition it creates the right hand side of \autoref{fig:profilingExample} which shows the profiling result. Since the Profiler pane is interactive, I have added extra white text for visualization. Each block represents one specific operation inside the code and the wider the block is, the more time is spent in that operation. The vertical axis represents how deep into the stack trace the operation is. For \autoref{fig:profilingExample} line 21(L21) and 22 (L22) are at top of the stack trace. We can also see that we spend more time in \texttt{func1(x)} than \texttt{sumArray(x)}. The time spent on each line can also be seen by the blue bars on each line. If we say  L21 and L22 is at depth 1, then line 13 and 14 is at depth 2. The \texttt{getindex} and \texttt{+} blocks are built in functions in Julia that are called from line 4 in \texttt{func1(x)}. These functions are deeper than line 13 and 14 at depth 3. Technically it should have been an extra block underneath line 21 that represents line 4 to get the full stack trace. The only reason I have found why this is not part of the visualization is that the \texttt{@profiler} tool is still a work in progress, and that it does not work perfectly just yet. However, this tool is super efficient to find bottlenecks in your code, especially when you have a larger program than the simple example in \autoref{fig:profilingExample}. 
+\autoref{fig:profilingExample} shows the interface from the Juno IDE using the \texttt{@profiler} macro function \emph{\citep{JunoProfilerMacro}} for a simple test case. The right hand side of \autoref{fig:profilingExample} shows a test case with a \texttt{main()} function that creates a random variable \texttt{x} of length \texttt{z}. It then  calls the \texttt{func1(x)} function that adds 1.0 to each element of \texttt{x}. Lastly it calls \texttt{sumArray(x)} that sums up all the values of \texttt{x} and uses \texttt{func2()} to set all values of x to zero. \texttt{@profiler} is a specific Juno macro that uses the built in \texttt{@profile} in Julia \emph{\citep{Profile.jl}} to profile the \texttt{main()} function, but in addition it creates the right hand side of \autoref{fig:profilingExample} which shows the profiling result. Since the Profiler pane is interactive, I have added extra white text for visualization. Each block represents one specific operation inside the code and the wider the block is, the more time is spent in that operation. The vertical axis represents how deep into the stack trace the operation is. For \autoref{fig:profilingExample} line 21(L21) and 22 (L22) are at top of the stack trace. We can also see that we spend more time in \texttt{func1(x)} than \texttt{sumArray(x)}. The time spent on each line can also be seen by the blue bars on each line. If we say  L21 and L22 is at depth 1, then line 13 and 14 is at depth 2. The \texttt{getindex} and \texttt{+} blocks are built in functions in Julia that are called from line 4 in \texttt{func1(x)}. These functions are deeper than line 13 and 14 at depth 3. Technically it should have been an extra block underneath line 21 that represents line 4 to get the full stack trace. The only reason I have found why this is not part of the visualization is that the \texttt{@profiler} tool is still a work in progress, and that it does not work perfectly just yet. However, this tool is super efficient to find bottlenecks in your code, especially when you have a larger program than the simple example in \autoref{fig:profilingExample}. 
 \subsection{Debugger}
 \label{sec:debugger}
 Many IDEs for different languages have the ability to debug code. This is a tool to step into your functions and execute them step by step to reveal error and bugs in your code. Recently on March 19th \citet{Debugger} published a debugger for Julia. This can be used directly in the terminal using the \texttt{@enter} macro function or as a built-in debugger in Juno with \texttt{Juno.@enter}. \autoref{fig:debuggerExample} shows the interface of Juno's debugger for a simple test function.
