--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -37,8 +37,7 @@ Line number 8 in \texttt{assembleFlowSystem!()} is the last line I have not comm
 
 Summed up, the calculation of the residual functions using local AD is based on two modules. The first is the actual AD tool with the \texttt{LAD} struct, and the second is \texttt{FlowSystem}, which keeps track of the global system and what calculations should be performed by the AD tool. With this approach, we loose some of the advantages using the other AD tools where the discrete residual functions looked very similar to the continuous case, like explained in \autoref{sec:setupGovEq}. The main structure of \texttt{assembleFlowSystem!()} will, however, be the same no matter what type of simulation, hence making modifications to the code, or building another simulator, will not demand a complete change of the code structure.
 
-Now that the assemble of the governing equations are implemented, we need a main loop that performs the simulation. 
-
+Now that the assemble of the governing equations are implemented, we need a main loop that performs the simulation. The good news is that this main loop will be very similar to the one outlined in \autoref{sec:setupGovEq}. The only difference is that instead of evaluating a residual function F, we assemble the equations using \texttt{assembleFlowSystem!()}. A pseudo code of the new main loop can be seen below. 
 \lstinputlisting{code/FlowSimulatorLocalAD.jl}
 
 \section{Optimizing Local AD}
